--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -1,33 +1,69 @@
 name: Solar System Workflow
-
-on: 
-  workflow_dispatch:
+'on':
+  workflow_dispatch: null
   push:
     branches:
       - main
-      - 'feature/*'
-    
+      - feature/*
+env:
+  MONGO_URI: 'mongodb+srv://supercluster.d83jj.mongodb.net/superData'
+  MONGO_USERNAME: superuser
+  MONGO_PASSWORD: '${{ secrets.MONGO_PASSWORD }}'
 jobs:
-    unit-testing:
-        name: Unit Testing
-        runs-on: ubuntu-latest
-        steps:
-        - name: Checkout Repository
-          uses: actions/checkout@v4
+  unit-testing:
+    name: Unit Testing
+    runs-on: ubuntu-latest
+    container:
+      image: 'node:18'
+    env:
+      MONGO_URI: 'mongodb://mongo:27017/superData'
+      MONGO_USERNAME: non-prod-user
+      MONGO_PASSWORD: non-prod-password
+    services:
+      mongo:
+        image: 'siddharth67/mongo-db:non-prod'
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      
+      - name: Cache NPM dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: '${{ runner.os }}-node-${{ hashFiles(''package-lock.json'') }}'
+      - name: Install Dependencies
+        run: npm install
+      - name: Unit Testing
+        run: npm test
+      - name: Archive Test Result
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: Mocha-Test-Result
+          path: test-results.xml
 
-        - name: Setup NodeJS Version
-          uses: actions/setup-node@v3
-          with:
-            node-version: 20
-    
-        - name: Install Dependencies
-          run: npm install
-    
-        - name: Unit Testing
-          run: npm test
-          
-        - name: Archive Test Result
-          uses: actions/upload-artifact@v3
-          with:
-            name: Mocha-Test-Result
-            path: test-results.xml
+  docker:
+    permissions: 
+      packages: write
+    runs-on: ubuntu-latest
+    container: 
+      image: node:20
+    needs: unit-testing
+
+    steps:
+      - name: set lower case owner name
+        run: |
+          echo "OWNER_LC=$(echo $OWNER | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+        env:
+          OWNER: '${{ github.repository_owner }}'
+      - uses: actions/checkout@v4
+      - uses: docker/login-action@v2.2.0
+        with:
+          registry: ghcr.io
+          username: '${{ github.repository_owner }}'
+          password: '${{ secrets.GITHUB_TOKEN }}'
+      - uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: 'ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}'
