--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -51,16 +51,16 @@ jobs:
     needs: unit-testing
 
     steps:
-      - name: set lower case owner name
-        run: |
-          echo "OWNER_LC=$(echo $OWNER | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-        env:
-          OWNER: '${{ github.repository_owner }}'
+      # - name: set lower case owner name
+      #   run: |
+      #     echo "OWNER_LC=$(echo $OWNER | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+      #   env:
+      #     OWNER: '${{ github.repository_owner }}'
       - uses: actions/checkout@v4
       - uses: docker/login-action@v2.2.0
         with:
           registry: ghcr.io
-          username: '${{ github.repository_owner }}'
+          username: 'venugopalpentyala'
           password: '${{ secrets.GITHUB_TOKEN }}'
       - uses: docker/build-push-action@v4
         with:
